docs/provider-aws/0.36/glue/v1alpha1/connection.md
---
permalink: /provider-aws/0.36/glue/v1alpha1/connection/
---

# glue.v1alpha1.connection

"Connection is the Schema for the Connections API"

## Index

* [`fn new(name)`](#fn-new)
* [`obj metadata`](#obj-metadata)
  * [`fn withAnnotations(annotations)`](#fn-metadatawithannotations)
  * [`fn withAnnotationsMixin(annotations)`](#fn-metadatawithannotationsmixin)
  * [`fn withClusterName(clusterName)`](#fn-metadatawithclustername)
  * [`fn withCreationTimestamp(creationTimestamp)`](#fn-metadatawithcreationtimestamp)
  * [`fn withDeletionGracePeriodSeconds(deletionGracePeriodSeconds)`](#fn-metadatawithdeletiongraceperiodseconds)
  * [`fn withDeletionTimestamp(deletionTimestamp)`](#fn-metadatawithdeletiontimestamp)
  * [`fn withFinalizers(finalizers)`](#fn-metadatawithfinalizers)
  * [`fn withFinalizersMixin(finalizers)`](#fn-metadatawithfinalizersmixin)
  * [`fn withGenerateName(generateName)`](#fn-metadatawithgeneratename)
  * [`fn withGeneration(generation)`](#fn-metadatawithgeneration)
  * [`fn withLabels(labels)`](#fn-metadatawithlabels)
  * [`fn withLabelsMixin(labels)`](#fn-metadatawithlabelsmixin)
  * [`fn withName(name)`](#fn-metadatawithname)
  * [`fn withNamespace(namespace)`](#fn-metadatawithnamespace)
  * [`fn withOwnerReferences(ownerReferences)`](#fn-metadatawithownerreferences)
  * [`fn withOwnerReferencesMixin(ownerReferences)`](#fn-metadatawithownerreferencesmixin)
  * [`fn withResourceVersion(resourceVersion)`](#fn-metadatawithresourceversion)
  * [`fn withSelfLink(selfLink)`](#fn-metadatawithselflink)
  * [`fn withUid(uid)`](#fn-metadatawithuid)
* [`obj spec`](#obj-spec)
  * [`fn withDeletionPolicy(deletionPolicy)`](#fn-specwithdeletionpolicy)
  * [`obj spec.forProvider`](#obj-specforprovider)
    * [`fn withCatalogID(catalogID)`](#fn-specforproviderwithcatalogid)
    * [`fn withRegion(region)`](#fn-specforproviderwithregion)
    * [`fn withTags(tags)`](#fn-specforproviderwithtags)
    * [`fn withTagsMixin(tags)`](#fn-specforproviderwithtagsmixin)
    * [`obj spec.forProvider.connectionInput`](#obj-specforproviderconnectioninput)
      * [`fn withConnectionProperties(connectionProperties)`](#fn-specforproviderconnectioninputwithconnectionproperties)
      * [`fn withConnectionPropertiesMixin(connectionProperties)`](#fn-specforproviderconnectioninputwithconnectionpropertiesmixin)
      * [`fn withConnectionType(connectionType)`](#fn-specforproviderconnectioninputwithconnectiontype)
      * [`fn withDescription(description)`](#fn-specforproviderconnectioninputwithdescription)
      * [`fn withMatchCriteria(matchCriteria)`](#fn-specforproviderconnectioninputwithmatchcriteria)
      * [`fn withMatchCriteriaMixin(matchCriteria)`](#fn-specforproviderconnectioninputwithmatchcriteriamixin)
      * [`obj spec.forProvider.connectionInput.physicalConnectionRequirements`](#obj-specforproviderconnectioninputphysicalconnectionrequirements)
        * [`fn withAvailabilityZone(availabilityZone)`](#fn-specforproviderconnectioninputphysicalconnectionrequirementswithavailabilityzone)
        * [`fn withSecurityGroupIdList(securityGroupIdList)`](#fn-specforproviderconnectioninputphysicalconnectionrequirementswithsecuritygroupidlist)
        * [`fn withSecurityGroupIdListMixin(securityGroupIdList)`](#fn-specforproviderconnectioninputphysicalconnectionrequirementswithsecuritygroupidlistmixin)
        * [`fn withSecurityGroupIdRefs(securityGroupIdRefs)`](#fn-specforproviderconnectioninputphysicalconnectionrequirementswithsecuritygroupidrefs)
        * [`fn withSecurityGroupIdRefsMixin(securityGroupIdRefs)`](#fn-specforproviderconnectioninputphysicalconnectionrequirementswithsecuritygroupidrefsmixin)
        * [`fn withSubnetId(subnetId)`](#fn-specforproviderconnectioninputphysicalconnectionrequirementswithsubnetid)
        * [`obj spec.forProvider.connectionInput.physicalConnectionRequirements.securityGroupIdRefs`](#obj-specforproviderconnectioninputphysicalconnectionrequirementssecuritygroupidrefs)
          * [`fn withName(name)`](#fn-specforproviderconnectioninputphysicalconnectionrequirementssecuritygroupidrefswithname)
          * [`obj spec.forProvider.connectionInput.physicalConnectionRequirements.securityGroupIdRefs.policy`](#obj-specforproviderconnectioninputphysicalconnectionrequirementssecuritygroupidrefspolicy)
            * [`fn withResolution(resolution)`](#fn-specforproviderconnectioninputphysicalconnectionrequirementssecuritygroupidrefspolicywithresolution)
            * [`fn withResolve(resolve)`](#fn-specforproviderconnectioninputphysicalconnectionrequirementssecuritygroupidrefspolicywithresolve)
        * [`obj spec.forProvider.connectionInput.physicalConnectionRequirements.securityGroupIdSelector`](#obj-specforproviderconnectioninputphysicalconnectionrequirementssecuritygroupidselector)
          * [`fn withMatchControllerRef(matchControllerRef)`](#fn-specforproviderconnectioninputphysicalconnectionrequirementssecuritygroupidselectorwithmatchcontrollerref)
          * [`fn withMatchLabels(matchLabels)`](#fn-specforproviderconnectioninputphysicalconnectionrequirementssecuritygroupidselectorwithmatchlabels)
          * [`fn withMatchLabelsMixin(matchLabels)`](#fn-specforproviderconnectioninputphysicalconnectionrequirementssecuritygroupidselectorwithmatchlabelsmixin)
          * [`obj spec.forProvider.connectionInput.physicalConnectionRequirements.securityGroupIdSelector.policy`](#obj-specforproviderconnectioninputphysicalconnectionrequirementssecuritygroupidselectorpolicy)
            * [`fn withResolution(resolution)`](#fn-specforproviderconnectioninputphysicalconnectionrequirementssecuritygroupidselectorpolicywithresolution)
            * [`fn withResolve(resolve)`](#fn-specforproviderconnectioninputphysicalconnectionrequirementssecuritygroupidselectorpolicywithresolve)
        * [`obj spec.forProvider.connectionInput.physicalConnectionRequirements.subnetIdRef`](#obj-specforproviderconnectioninputphysicalconnectionrequirementssubnetidref)
          * [`fn withName(name)`](#fn-specforproviderconnectioninputphysicalconnectionrequirementssubnetidrefwithname)
          * [`obj spec.forProvider.connectionInput.physicalConnectionRequirements.subnetIdRef.policy`](#obj-specforproviderconnectioninputphysicalconnectionrequirementssubnetidrefpolicy)
            * [`fn withResolution(resolution)`](#fn-specforproviderconnectioninputphysicalconnectionrequirementssubnetidrefpolicywithresolution)
            * [`fn withResolve(resolve)`](#fn-specforproviderconnectioninputphysicalconnectionrequirementssubnetidrefpolicywithresolve)
        * [`obj spec.forProvider.connectionInput.physicalConnectionRequirements.subnetIdSelector`](#obj-specforproviderconnectioninputphysicalconnectionrequirementssubnetidselector)
          * [`fn withMatchControllerRef(matchControllerRef)`](#fn-specforproviderconnectioninputphysicalconnectionrequirementssubnetidselectorwithmatchcontrollerref)
          * [`fn withMatchLabels(matchLabels)`](#fn-specforproviderconnectioninputphysicalconnectionrequirementssubnetidselectorwithmatchlabels)
          * [`fn withMatchLabelsMixin(matchLabels)`](#fn-specforproviderconnectioninputphysicalconnectionrequirementssubnetidselectorwithmatchlabelsmixin)
          * [`obj spec.forProvider.connectionInput.physicalConnectionRequirements.subnetIdSelector.policy`](#obj-specforproviderconnectioninputphysicalconnectionrequirementssubnetidselectorpolicy)
            * [`fn withResolution(resolution)`](#fn-specforproviderconnectioninputphysicalconnectionrequirementssubnetidselectorpolicywithresolution)
            * [`fn withResolve(resolve)`](#fn-specforproviderconnectioninputphysicalconnectionrequirementssubnetidselectorpolicywithresolve)
  * [`obj spec.providerConfigRef`](#obj-specproviderconfigref)
    * [`fn withName(name)`](#fn-specproviderconfigrefwithname)
    * [`obj spec.providerConfigRef.policy`](#obj-specproviderconfigrefpolicy)
      * [`fn withResolution(resolution)`](#fn-specproviderconfigrefpolicywithresolution)
      * [`fn withResolve(resolve)`](#fn-specproviderconfigrefpolicywithresolve)
  * [`obj spec.providerRef`](#obj-specproviderref)
    * [`fn withName(name)`](#fn-specproviderrefwithname)
    * [`obj spec.providerRef.policy`](#obj-specproviderrefpolicy)
      * [`fn withResolution(resolution)`](#fn-specproviderrefpolicywithresolution)
      * [`fn withResolve(resolve)`](#fn-specproviderrefpolicywithresolve)
  * [`obj spec.publishConnectionDetailsTo`](#obj-specpublishconnectiondetailsto)
    * [`fn withName(name)`](#fn-specpublishconnectiondetailstowithname)
    * [`obj spec.publishConnectionDetailsTo.configRef`](#obj-specpublishconnectiondetailstoconfigref)
      * [`fn withName(name)`](#fn-specpublishconnectiondetailstoconfigrefwithname)
      * [`obj spec.publishConnectionDetailsTo.configRef.policy`](#obj-specpublishconnectiondetailstoconfigrefpolicy)
        * [`fn withResolution(resolution)`](#fn-specpublishconnectiondetailstoconfigrefpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specpublishconnectiondetailstoconfigrefpolicywithresolve)
    * [`obj spec.publishConnectionDetailsTo.metadata`](#obj-specpublishconnectiondetailstometadata)
      * [`fn withAnnotations(annotations)`](#fn-specpublishconnectiondetailstometadatawithannotations)
      * [`fn withAnnotationsMixin(annotations)`](#fn-specpublishconnectiondetailstometadatawithannotationsmixin)
      * [`fn withLabels(labels)`](#fn-specpublishconnectiondetailstometadatawithlabels)
      * [`fn withLabelsMixin(labels)`](#fn-specpublishconnectiondetailstometadatawithlabelsmixin)
      * [`fn withType(type)`](#fn-specpublishconnectiondetailstometadatawithtype)
  * [`obj spec.writeConnectionSecretToRef`](#obj-specwriteconnectionsecrettoref)
    * [`fn withName(name)`](#fn-specwriteconnectionsecrettorefwithname)
    * [`fn withNamespace(namespace)`](#fn-specwriteconnectionsecrettorefwithnamespace)

## Fields

### fn new

```ts
new(name)
```

new returns an instance of Connection

## obj metadata

"ObjectMeta is metadata that all persisted resources must have, which includes all objects users must create."

### fn metadata.withAnnotations

```ts
withAnnotations(annotations)
```

"Annotations is an unstructured key value map stored with a resource that may be set by external tools to store and retrieve arbitrary metadata. They are not queryable and should be preserved when modifying objects. More info: http://kubernetes.io/docs/user-guide/annotations"

### fn metadata.withAnnotationsMixin

```ts
withAnnotationsMixin(annotations)
```

"Annotations is an unstructured key value map stored with a resource that may be set by external tools to store and retrieve arbitrary metadata. They are not queryable and should be preserved when modifying objects. More info: http://kubernetes.io/docs/user-guide/annotations"

**Note:** This function appends passed data to existing values

### fn metadata.withClusterName

```ts
withClusterName(clusterName)
```

"The name of the cluster which the object belongs to. This is used to distinguish resources with same name and namespace in different clusters. This field is not set anywhere right now and apiserver is going to ignore it if set in create or update request."

### fn metadata.withCreationTimestamp

```ts
withCreationTimestamp(creationTimestamp)
```

"Time is a wrapper around time.Time which supports correct marshaling to YAML and JSON.  Wrappers are provided for many of the factory methods that the time package offers."

### fn metadata.withDeletionGracePeriodSeconds

```ts
withDeletionGracePeriodSeconds(deletionGracePeriodSeconds)
```

"Number of seconds allowed for this object to gracefully terminate before it will be removed from the system. Only set when deletionTimestamp is also set. May only be shortened. Read-only."

### fn metadata.withDeletionTimestamp

```ts
withDeletionTimestamp(deletionTimestamp)
```

"Time is a wrapper around time.Time which supports correct marshaling to YAML and JSON.  Wrappers are provided for many of the factory methods that the time package offers."

### fn metadata.withFinalizers

```ts
withFinalizers(finalizers)
```

"Must be empty before the object is deleted from the registry. Each entry is an identifier for the responsible component that will remove the entry from the list. If the deletionTimestamp of the object is non-nil, entries in this list can only be removed. Finalizers may be processed and removed in any order.  Order is NOT enforced because it introduces significant risk of stuck finalizers. finalizers is a shared field, any actor with permission can reorder it. If the finalizer list is processed in order, then this can lead to a situation in which the component responsible for the first finalizer in the list is waiting for a signal (field value, external system, or other) produced by a component responsible for a finalizer later in the list, resulting in a deadlock. Without enforced ordering finalizers are free to order amongst themselves and are not vulnerable to ordering changes in the list."

### fn metadata.withFinalizersMixin

```ts
withFinalizersMixin(finalizers)
```

"Must be empty before the object is deleted from the registry. Each entry is an identifier for the responsible component that will remove the entry from the list. If the deletionTimestamp of the object is non-nil, entries in this list can only be removed. Finalizers may be processed and removed in any order.  Order is NOT enforced because it introduces significant risk of stuck finalizers. finalizers is a shared field, any actor with permission can reorder it. If the finalizer list is processed in order, then this can lead to a situation in which the component responsible for the first finalizer in the list is waiting for a signal (field value, external system, or other) produced by a component responsible for a finalizer later in the list, resulting in a deadlock. Without enforced ordering finalizers are free to order amongst themselves and are not vulnerable to ordering changes in the list."

**Note:** This function appends passed data to existing values

### fn metadata.withGenerateName

```ts
withGenerateName(generateName)
```

"GenerateName is an optional prefix, used by the server, to generate a unique name ONLY IF the Name field has not been provided. If this field is used, the name returned to the client will be different than the name passed. This value will also be combined with a unique suffix. The provided value has the same validation rules as the Name field, and may be truncated by the length of the suffix required to make the value unique on the server.\n\nIf this field is specified and the generated name exists, the server will NOT return a 409 - instead, it will either return 201 Created or 500 with Reason ServerTimeout indicating a unique name could not be found in the time allotted, and the client should retry (optionally after the time indicated in the Retry-After header).\n\nApplied only if Name is not specified. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#idempotency"

### fn metadata.withGeneration

```ts
withGeneration(generation)
```

"A sequence number representing a specific generation of the desired state. Populated by the system. Read-only."

### fn metadata.withLabels

```ts
withLabels(labels)
```

"Map of string keys and values that can be used to organize and categorize (scope and select) objects. May match selectors of replication controllers and services. More info: http://kubernetes.io/docs/user-guide/labels"

### fn metadata.withLabelsMixin

```ts
withLabelsMixin(labels)
```

"Map of string keys and values that can be used to organize and categorize (scope and select) objects. May match selectors of replication controllers and services. More info: http://kubernetes.io/docs/user-guide/labels"

**Note:** This function appends passed data to existing values

### fn metadata.withName

```ts
withName(name)
```

"Name must be unique within a namespace. Is required when creating resources, although some resources may allow a client to request the generation of an appropriate name automatically. Name is primarily intended for creation idempotence and configuration definition. Cannot be updated. More info: http://kubernetes.io/docs/user-guide/identifiers#names"

### fn metadata.withNamespace

```ts
withNamespace(namespace)
```

"Namespace defines the space within which each name must be unique. An empty namespace is equivalent to the \"default\" namespace, but \"default\" is the canonical representation. Not all objects are required to be scoped to a namespace - the value of this field for those objects will be empty.\n\nMust be a DNS_LABEL. Cannot be updated. More info: http://kubernetes.io/docs/user-guide/namespaces"

### fn metadata.withOwnerReferences

```ts
withOwnerReferences(ownerReferences)
```

"List of objects depended by this object. If ALL objects in the list have been deleted, this object will be garbage collected. If this object is managed by a controller, then an entry in this list will point to this controller, with the controller field set to true. There cannot be more than one managing controller."

### fn metadata.withOwnerReferencesMixin

```ts
withOwnerReferencesMixin(ownerReferences)
```

"List of objects depended by this object. If ALL objects in the list have been deleted, this object will be garbage collected. If this object is managed by a controller, then an entry in this list will point to this controller, with the controller field set to true. There cannot be more than one managing controller."

**Note:** This function appends passed data to existing values

### fn metadata.withResourceVersion

```ts
withResourceVersion(resourceVersion)
```

"An opaque value that represents the internal version of this object that can be used by clients to determine when objects have changed. May be used for optimistic concurrency, change detection, and the watch operation on a resource or set of resources. Clients must treat these values as opaque and passed unmodified back to the server. They may only be valid for a particular resource or set of resources.\n\nPopulated by the system. Read-only. Value must be treated as opaque by clients and . More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#concurrency-control-and-consistency"

### fn metadata.withSelfLink

```ts
withSelfLink(selfLink)
```

"SelfLink is a URL representing this object. Populated by the system. Read-only.\n\nDEPRECATED Kubernetes will stop propagating this field in 1.20 release and the field is planned to be removed in 1.21 release."

### fn metadata.withUid

```ts
withUid(uid)
```

"UID is the unique in time and space value for this object. It is typically generated by the server on successful creation of a resource and is not allowed to change on PUT operations.\n\nPopulated by the system. Read-only. More info: http://kubernetes.io/docs/user-guide/identifiers#uids"

## obj spec

"ConnectionSpec defines the desired state of Connection"

### fn spec.withDeletionPolicy

```ts
withDeletionPolicy(deletionPolicy)
```

"DeletionPolicy specifies what will happen to the underlying external when this managed resource is deleted - either \"Delete\" or \"Orphan\" the external resource."

## obj spec.forProvider

"ConnectionParameters defines the desired state of Connection"

### fn spec.forProvider.withCatalogID

```ts
withCatalogID(catalogID)
```

"The ID of the Data Catalog in which to create the connection. If none is provided, the Amazon Web Services account ID is used by default."

### fn spec.forProvider.withRegion

```ts
withRegion(region)
```

"Region is which region the Connection will be created."

### fn spec.forProvider.withTags

```ts
withTags(tags)
```

"The tags you assign to the connection."

### fn spec.forProvider.withTagsMixin

```ts
withTagsMixin(tags)
```

"The tags you assign to the connection."

**Note:** This function appends passed data to existing values

## obj spec.forProvider.connectionInput

"A ConnectionInput object defining the connection to create."

### fn spec.forProvider.connectionInput.withConnectionProperties

```ts
withConnectionProperties(connectionProperties)
```

"These key-value pairs define parameters for the connection. Possible keys for connection properties: \"HOST\"|\"PORT\"|\"USERNAME\"|\"PASSWORD\"|\"ENCRYPTED_PASSWORD\"|\"JDBC_DRIVER_JAR_URI\" \"JDBC_DRIVER_CLASS_NAME\"|\"JDBC_ENGINE\"|\"JDBC_ENGINE_VERSION\"|\"CONFIG_FILES\" \"INSTANCE_ID\"|\"JDBC_CONNECTION_URL\"|\"JDBC_ENFORCE_SSL\"|\"CUSTOM_JDBC_CERT\" \"SKIP_CUSTOM_JDBC_CERT_VALIDATION\"|\"CUSTOM_JDBC_CERT_STRING\"|\"CONNECTION_URL\" \"KAFKA_BOOTSTRAP_SERVERS\"|\"KAFKA_SSL_ENABLED\"|\"KAFKA_CUSTOM_CERT\" \"KAFKA_SKIP_CUSTOM_CERT_VALIDATION\"|\"KAFKA_CLIENT_KEYSTORE\" \"KAFKA_CLIENT_KEYSTORE_PASSWORD\"|\"KAFKA_CLIENT_KEY_PASSWORD\" \"ENCRYPTED_KAFKA_CLIENT_KEYSTORE_PASSWORD\"|\"ENCRYPTED_KAFKA_CLIENT_KEY_PASSWORD\" \"SECRET_ID\"|\"CONNECTOR_URL\"|\"CONNECTOR_TYPE\"|\"CONNECTOR_CLASS_NAME\" \n ConnectionProperties is a required field"

### fn spec.forProvider.connectionInput.withConnectionPropertiesMixin

```ts
withConnectionPropertiesMixin(connectionProperties)
```

"These key-value pairs define parameters for the connection. Possible keys for connection properties: \"HOST\"|\"PORT\"|\"USERNAME\"|\"PASSWORD\"|\"ENCRYPTED_PASSWORD\"|\"JDBC_DRIVER_JAR_URI\" \"JDBC_DRIVER_CLASS_NAME\"|\"JDBC_ENGINE\"|\"JDBC_ENGINE_VERSION\"|\"CONFIG_FILES\" \"INSTANCE_ID\"|\"JDBC_CONNECTION_URL\"|\"JDBC_ENFORCE_SSL\"|\"CUSTOM_JDBC_CERT\" \"SKIP_CUSTOM_JDBC_CERT_VALIDATION\"|\"CUSTOM_JDBC_CERT_STRING\"|\"CONNECTION_URL\" \"KAFKA_BOOTSTRAP_SERVERS\"|\"KAFKA_SSL_ENABLED\"|\"KAFKA_CUSTOM_CERT\" \"KAFKA_SKIP_CUSTOM_CERT_VALIDATION\"|\"KAFKA_CLIENT_KEYSTORE\" \"KAFKA_CLIENT_KEYSTORE_PASSWORD\"|\"KAFKA_CLIENT_KEY_PASSWORD\" \"ENCRYPTED_KAFKA_CLIENT_KEYSTORE_PASSWORD\"|\"ENCRYPTED_KAFKA_CLIENT_KEY_PASSWORD\" \"SECRET_ID\"|\"CONNECTOR_URL\"|\"CONNECTOR_TYPE\"|\"CONNECTOR_CLASS_NAME\" \n ConnectionProperties is a required field"

**Note:** This function appends passed data to existing values

### fn spec.forProvider.connectionInput.withConnectionType

```ts
withConnectionType(connectionType)
```

"The type of the connection. Currently, these types are supported: \n * JDBC - Designates a connection to a database through Java Database Connectivity (JDBC). \n * KAFKA - Designates a connection to an Apache Kafka streaming platform. \n * MONGODB - Designates a connection to a MongoDB document database. \n * NETWORK - Designates a network connection to a data source within an Amazon Virtual Private Cloud environment (Amazon VPC). \n * MARKETPLACE - Uses configuration settings contained in a connector purchased from Amazon Web Services Marketplace to read from and write to data stores that are not natively supported by Glue. \n * CUSTOM - Uses configuration settings contained in a custom connector to read from and write to data stores that are not natively supported by Glue. \n SFTP is not supported. \n ConnectionType is a required field"

### fn spec.forProvider.connectionInput.withDescription

```ts
withDescription(description)
```

"The description of the connection."

### fn spec.forProvider.connectionInput.withMatchCriteria

```ts
withMatchCriteria(matchCriteria)
```

"A list of criteria that can be used in selecting this connection."

### fn spec.forProvider.connectionInput.withMatchCriteriaMixin

```ts
withMatchCriteriaMixin(matchCriteria)
```

"A list of criteria that can be used in selecting this connection."

**Note:** This function appends passed data to existing values

## obj spec.forProvider.connectionInput.physicalConnectionRequirements

"Specifies the physical requirements for a connection."

### fn spec.forProvider.connectionInput.physicalConnectionRequirements.withAvailabilityZone

```ts
withAvailabilityZone(availabilityZone)
```

"The connection's Availability Zone. This field is redundant because the specified subnet implies the Availability Zone to be used. Currently the field must be populated, but it will be removed in the future."

### fn spec.forProvider.connectionInput.physicalConnectionRequirements.withSecurityGroupIdList

```ts
withSecurityGroupIdList(securityGroupIdList)
```

"The security group ID list used by the connection."

### fn spec.forProvider.connectionInput.physicalConnectionRequirements.withSecurityGroupIdListMixin

```ts
withSecurityGroupIdListMixin(securityGroupIdList)
```

"The security group ID list used by the connection."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.connectionInput.physicalConnectionRequirements.withSecurityGroupIdRefs

```ts
withSecurityGroupIdRefs(securityGroupIdRefs)
```

"SecurityGroupIDRefs are references to SecurityGroups used to set the SecurityGroupIDs."

### fn spec.forProvider.connectionInput.physicalConnectionRequirements.withSecurityGroupIdRefsMixin

```ts
withSecurityGroupIdRefsMixin(securityGroupIdRefs)
```

"SecurityGroupIDRefs are references to SecurityGroups used to set the SecurityGroupIDs."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.connectionInput.physicalConnectionRequirements.withSubnetId

```ts
withSubnetId(subnetId)
```

"The subnet ID used by the connection."

## obj spec.forProvider.connectionInput.physicalConnectionRequirements.securityGroupIdRefs

"SecurityGroupIDRefs are references to SecurityGroups used to set the SecurityGroupIDs."

### fn spec.forProvider.connectionInput.physicalConnectionRequirements.securityGroupIdRefs.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.forProvider.connectionInput.physicalConnectionRequirements.securityGroupIdRefs.policy

"Policies for referencing."

### fn spec.forProvider.connectionInput.physicalConnectionRequirements.securityGroupIdRefs.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required. The default is 'Required', which means the reconcile will fail if the reference cannot be resolved. 'Optional' means this reference will be a no-op if it cannot be resolved."

### fn spec.forProvider.connectionInput.physicalConnectionRequirements.securityGroupIdRefs.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default is 'IfNotPresent', which will attempt to resolve the reference only when the corresponding field is not present. Use 'Always' to resolve the reference on every reconcile."

## obj spec.forProvider.connectionInput.physicalConnectionRequirements.securityGroupIdSelector

"SecurityGroupIDSelector selects references to SecurityGroups used to set the SecurityGroupIDs."

### fn spec.forProvider.connectionInput.physicalConnectionRequirements.securityGroupIdSelector.withMatchControllerRef

```ts
withMatchControllerRef(matchControllerRef)
```

"MatchControllerRef ensures an object with the same controller reference as the selecting object is selected."

### fn spec.forProvider.connectionInput.physicalConnectionRequirements.securityGroupIdSelector.withMatchLabels

```ts
withMatchLabels(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

### fn spec.forProvider.connectionInput.physicalConnectionRequirements.securityGroupIdSelector.withMatchLabelsMixin

```ts
withMatchLabelsMixin(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

**Note:** This function appends passed data to existing values

## obj spec.forProvider.connectionInput.physicalConnectionRequirements.securityGroupIdSelector.policy

"Policies for selection."

### fn spec.forProvider.connectionInput.physicalConnectionRequirements.securityGroupIdSelector.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required. The default is 'Required', which means the reconcile will fail if the reference cannot be resolved. 'Optional' means this reference will be a no-op if it cannot be resolved."

### fn spec.forProvider.connectionInput.physicalConnectionRequirements.securityGroupIdSelector.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default is 'IfNotPresent', which will attempt to resolve the reference only when the corresponding field is not present. Use 'Always' to resolve the reference on every reconcile."

## obj spec.forProvider.connectionInput.physicalConnectionRequirements.subnetIdRef

"SubnetIDRef is a reference to SubnetID used to set the SubnetID."

### fn spec.forProvider.connectionInput.physicalConnectionRequirements.subnetIdRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.forProvider.connectionInput.physicalConnectionRequirements.subnetIdRef.policy

"Policies for referencing."

### fn spec.forProvider.connectionInput.physicalConnectionRequirements.subnetIdRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required. The default is 'Required', which means the reconcile will fail if the reference cannot be resolved. 'Optional' means this reference will be a no-op if it cannot be resolved."

### fn spec.forProvider.connectionInput.physicalConnectionRequirements.subnetIdRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default is 'IfNotPresent', which will attempt to resolve the reference only when the corresponding field is not present. Use 'Always' to resolve the reference on every reconcile."

## obj spec.forProvider.connectionInput.physicalConnectionRequirements.subnetIdSelector

"SubnetIDSelector selects a reference to SubnetID used to set the SubnetID."

### fn spec.forProvider.connectionInput.physicalConnectionRequirements.subnetIdSelector.withMatchControllerRef

```ts
withMatchControllerRef(matchControllerRef)
```

"MatchControllerRef ensures an object with the same controller reference as the selecting object is selected."

### fn spec.forProvider.connectionInput.physicalConnectionRequirements.subnetIdSelector.withMatchLabels

```ts
withMatchLabels(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

### fn spec.forProvider.connectionInput.physicalConnectionRequirements.subnetIdSelector.withMatchLabelsMixin

```ts
withMatchLabelsMixin(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

**Note:** This function appends passed data to existing values

## obj spec.forProvider.connectionInput.physicalConnectionRequirements.subnetIdSelector.policy

"Policies for selection."

### fn spec.forProvider.connectionInput.physicalConnectionRequirements.subnetIdSelector.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required. The default is 'Required', which means the reconcile will fail if the reference cannot be resolved. 'Optional' means this reference will be a no-op if it cannot be resolved."

### fn spec.forProvider.connectionInput.physicalConnectionRequirements.subnetIdSelector.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default is 'IfNotPresent', which will attempt to resolve the reference only when the corresponding field is not present. Use 'Always' to resolve the reference on every reconcile."

## obj spec.providerConfigRef

"ProviderConfigReference specifies how the provider that will be used to create, observe, update, and delete this managed resource should be configured."

### fn spec.providerConfigRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.providerConfigRef.policy

"Policies for referencing."

### fn spec.providerConfigRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required. The default is 'Required', which means the reconcile will fail if the reference cannot be resolved. 'Optional' means this reference will be a no-op if it cannot be resolved."

### fn spec.providerConfigRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default is 'IfNotPresent', which will attempt to resolve the reference only when the corresponding field is not present. Use 'Always' to resolve the reference on every reconcile."

## obj spec.providerRef

"ProviderReference specifies the provider that will be used to create, observe, update, and delete this managed resource. Deprecated: Please use ProviderConfigReference, i.e. `providerConfigRef`"

### fn spec.providerRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.providerRef.policy

"Policies for referencing."

### fn spec.providerRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required. The default is 'Required', which means the reconcile will fail if the reference cannot be resolved. 'Optional' means this reference will be a no-op if it cannot be resolved."

### fn spec.providerRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default is 'IfNotPresent', which will attempt to resolve the reference only when the corresponding field is not present. Use 'Always' to resolve the reference on every reconcile."

## obj spec.publishConnectionDetailsTo

"PublishConnectionDetailsTo specifies the connection secret config which contains a name, metadata and a reference to secret store config to which any connection details for this managed resource should be written. Connection details frequently include the endpoint, username, and password required to connect to the managed resource."

### fn spec.publishConnectionDetailsTo.withName

```ts
withName(name)
```

"Name is the name of the connection secret."

## obj spec.publishConnectionDetailsTo.configRef

"SecretStoreConfigRef specifies which secret store config should be used for this ConnectionSecret."

### fn spec.publishConnectionDetailsTo.configRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.publishConnectionDetailsTo.configRef.policy

"Policies for referencing."

### fn spec.publishConnectionDetailsTo.configRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required. The default is 'Required', which means the reconcile will fail if the reference cannot be resolved. 'Optional' means this reference will be a no-op if it cannot be resolved."

### fn spec.publishConnectionDetailsTo.configRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default is 'IfNotPresent', which will attempt to resolve the reference only when the corresponding field is not present. Use 'Always' to resolve the reference on every reconcile."

## obj spec.publishConnectionDetailsTo.metadata

"Metadata is the metadata for connection secret."

### fn spec.publishConnectionDetailsTo.metadata.withAnnotations

```ts
withAnnotations(annotations)
```

"Annotations are the annotations to be added to connection secret. - For Kubernetes secrets, this will be used as \"metadata.annotations\". - It is up to Secret Store implementation for others store types."

### fn spec.publishConnectionDetailsTo.metadata.withAnnotationsMixin

```ts
withAnnotationsMixin(annotations)
```

"Annotations are the annotations to be added to connection secret. - For Kubernetes secrets, this will be used as \"metadata.annotations\". - It is up to Secret Store implementation for others store types."

**Note:** This function appends passed data to existing values

### fn spec.publishConnectionDetailsTo.metadata.withLabels

```ts
withLabels(labels)
```

"Labels are the labels/tags to be added to connection secret. - For Kubernetes secrets, this will be used as \"metadata.labels\". - It is up to Secret Store implementation for others store types."

### fn spec.publishConnectionDetailsTo.metadata.withLabelsMixin

```ts
withLabelsMixin(labels)
```

"Labels are the labels/tags to be added to connection secret. - For Kubernetes secrets, this will be used as \"metadata.labels\". - It is up to Secret Store implementation for others store types."

**Note:** This function appends passed data to existing values

### fn spec.publishConnectionDetailsTo.metadata.withType

```ts
withType(type)
```

"Type is the SecretType for the connection secret. - Only valid for Kubernetes Secret Stores."

## obj spec.writeConnectionSecretToRef

"WriteConnectionSecretToReference specifies the namespace and name of a Secret to which any connection details for this managed resource should be written. Connection details frequently include the endpoint, username, and password required to connect to the managed resource. This field is planned to be replaced in a future release in favor of PublishConnectionDetailsTo. Currently, both could be set independently and connection details would be published to both without affecting each other."

### fn spec.writeConnectionSecretToRef.withName

```ts
withName(name)
```

"Name of the secret."

### fn spec.writeConnectionSecretToRef.withNamespace

```ts
withNamespace(namespace)
```

"Namespace of the secret."